--- a/yolov8_ros/package.xml
+++ b/yolov8_ros/package.xml
@@ -15,6 +15,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <depend>yolov8_ros_msgs</depend>
 
   <export>
 
